--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assignment-project",
+  "name": "product-crud-apis",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
